--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,12 +9,15 @@ server {
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml+rss image/svg+xml;
+    gzip_types text/plain text/css text/xml text/javascript 
+               application/javascript application/json 
+               application/xml+rss image/svg+xml;
 
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
     # Main location - serve static files
     location / {
@@ -27,6 +30,18 @@ server {
 
     # Proxy API requests to backend
     location /api/ {
+        # Handle preflight requests
+        if ($request_method = 'OPTIONS') {
+            add_header Access-Control-Allow-Origin "$http_origin" always;
+            add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+            add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
+            add_header Access-Control-Max-Age "3600" always;
+            add_header Content-Type "text/plain charset=UTF-8";
+            add_header Content-Length "0";
+            return 204;
+        }
+
+        # Важно: proxy_pass без trailing slash сохраняет путь /api/v1/...
         proxy_pass http://api:8080;
         proxy_http_version 1.1;
         
@@ -34,16 +49,24 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         
-        # CORS headers (handled by backend, but can be added here too)
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "Content-Type, Authorization" always;
+        # WebSocket support
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
         
         # Timeouts for long-running operations
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        proxy_buffering off;
+
+        # CORS headers for API responses
+        add_header Access-Control-Allow-Origin "$http_origin" always;
+        add_header Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS" always;
+        add_header Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With" always;
+        add_header Access-Control-Allow-Credentials "true" always;
     }
 
     # Health check endpoint
@@ -52,13 +75,20 @@ server {
         access_log off;
     }
 
-    # Disable caching for HTML to always get fresh content
+    # API v1 health check
+    location /api/v1/health {
+        proxy_pass http://api:8080/api/v1/health;
+        access_log off;
+    }
+
+    # Disable caching for HTML
     location ~* \.html$ {
         expires -1;
         add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate";
+        add_header Pragma "no-cache";
     }
 
-    # Cache JavaScript and CSS with versioning
+    # Cache JavaScript and CSS
     location ~* \.(js|css)$ {
         expires 30d;
         add_header Cache-Control "public, immutable";
@@ -70,8 +100,21 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Cache fonts
+    location ~* \.(woff|woff2|ttf|eot)$ {
+        expires 1y;
+        add_header Cache-Control "public, immutable";
+    }
+
     # Deny access to hidden files
     location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Deny access to sensitive files
+    location ~* (\.git|\.env|\.htaccess|\.htpasswd|config\.|composer\.|package\.) {
         deny all;
         access_log off;
         log_not_found off;
@@ -80,8 +123,13 @@ server {
     # Error pages
     error_page 404 /index.html;
     error_page 500 502 503 504 /50x.html;
+    
     location = /50x.html {
         root /usr/share/nginx/html;
+        internal;
     }
-}
 
+    # Logging
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
+}
